--- a/rainlily/.config/gtk-3.0/settings.ini
+++ b/rainlily/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=SolArc-Dark
+gtk-theme-name=SolArc
 gtk-icon-theme-name=Papirus-Dark
 gtk-font-name=Source Han Code JP 10
 gtk-cursor-theme-name=Simp1e-Solarized-Dark
@@ -14,6 +14,5 @@ gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
 gtk-xft-rgba=rgb
-gtk-application-prefer-dark-theme=0
+gtk-application-prefer-dark-theme=1
 gtk-decoration-layout=appmenu:none
-gtk-im-module=fcitx
