--- a/rainlily/.config/hypr/hypridle.conf
+++ b/rainlily/.config/hypr/hypridle.conf
@@ -7,28 +7,28 @@ general {
 # https://www.reddit.com/r/archlinux/comments/sas6hw/pipewire_no_audio_after_suspend/
 # killall pipewire; killall wireplumber; killall pipewire-pulse
 
-listener {
-    timeout = 120                                # 2min.
-    on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
-    on-resume = brightnessctl -r                 # monitor backlight restore.
-}
+# listener {
+#     timeout = 120                               # 2min.
+#     on-timeout = ddcutil -d 1 setvcp 10 1 && ddcutil -d 2 setvcp 10 1         # set monitor backlight to minimum, avoid 0 on OLED monitor.
+#     on-resume = ddcutil -d 1 setvcp 10 35 && ddcutil -d 2 setvcp 10 50                 # monitor backlight restore.
+# }
 
 # turn off keyboard backlight, comment out this section if you dont have a keyboard backlight.
 # listener { 
-#     timeout = 150                                          # 2.5min.
+#     timeout = 150                                          # 2.5mi3-
 #     on-timeout = brightnessctl -sd rgb:kbd_backlight set 0 # turn off keyboard backlight.
 #     on-resume = brightnessctl -rd rgb:kbd_backlight        # turn on keyboard backlight.
 # }
 
 listener {
-    timeout = 300                                 # 5min
-    on-timeout = loginctl lock-session            # lock screen when timeout has passed
+    timeout = 120                                 # 2 minutes
+    on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
+    on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
 }
 
 listener {
-    timeout = 180                                 # 5min
-    on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
+    timeout = 300                                 # 5 minutes
+    on-timeout = loginctl lock-session            # lock screen when timeout has passed
 }
 
 listener {
