--- a/rainlily/.config/hypr/hyprland.conf
+++ b/rainlily/.config/hypr/hyprland.conf
@@ -10,8 +10,8 @@
 ################
 
 # https://wiki.hyprland.org/Configuring/Monitors/
-monitor=HDMI-A-1, 2560x1080@144, 0x0, 1
-monitor=DP-3, 1920x1080@75, 2560x-540, 1, transform, 1
+monitor=DP-1, 3440x1440@144, 0x0, 1
+monitor=DP-2, 2560x1440@144, 3440x-720, 1, transform, 3
 monitor=, preferred, auto, 1
 
 xwayland {
@@ -26,7 +26,7 @@ xwayland {
 # https://wiki.hyprland.org/Configuring/Keywords/
 
 $terminal = kitty
-$fileManager = pcmanfm
+$fileManager = thunar
 $menu = killall rofi || rofi -theme config -show drun
 $open = killall rofi || rofi -theme config -show window
 
@@ -40,11 +40,12 @@ exec-once = swaync
 exec-once = nm-applet
 exec-once = fcitx5
 exec-once = blueman-applet
+exec-once = xmousepasteblock
 exec-once = thunar --daemon
 exec-once = openrgb -p /home/insti/.config/OpenRGB/config.orp
 
 exec-once = libinput-gestures-setup start
-exec-once = tp-auto-kbbl -b 1 -t 10
+# exec-once = tp-auto-kbbl -b 1 -t 10
 exec-once = hyprpaper
 exec-once = /home/insti/.scripts/launch-waybar.sh
 exec-once = hypridle
@@ -60,6 +61,7 @@ windowrulev2 = workspace 5 silent, class:^(vesktop)$
 exec-once = vesktop
 
 windowrulev2 = workspace 5 silent, class:^(spotify-launcher)$
+windowrulev2 = workspace 5 silent, class:^(spotify)$
 exec-once = spotify-launcher
 
 #############################
@@ -72,7 +74,9 @@ env = QT_QPA_PLATFORMTHEME,gtk2
 env = QT_IM_MODULE,fcitx
 # env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
+env = XCURSOR_THEME,Simp1e-Solarized-Dark
 env = XCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,Simp1e-Solarized-Dark
 env = HYPRCURSOR_SIZE,24
 
 env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/gcr/ssh
@@ -115,11 +119,6 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = false
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(073642aa)
-
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = false
@@ -137,12 +136,12 @@ animations {
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = windows, 1, 2, myBezier
+    animation = windowsOut, 1, 2, default, popin 80%
+    animation = border, 1, 4, default
+    animation = borderangle, 1, 3, default
+    animation = fade, 1, 2, default
+    animation = workspaces, 1, 2, default
 }
 
 dwindle {
@@ -151,7 +150,7 @@ dwindle {
 }
 
 master {
-    new_is_master = true
+    # new_is_master = true
 }
 
 cursor {
@@ -159,6 +158,8 @@ cursor {
 }
 
 misc { 
+    vrr = 1
+    middle_click_paste = false
     force_default_wallpaper = 0
     disable_hyprland_logo = true
 }
@@ -348,14 +349,16 @@ windowrulev2 = float,title:^(File Operation Progress)$
 
 # windowrulev2 = idleinhibit fullscreen, class:^(*)$
 windowrulev2 = idleinhibit fullscreen, fullscreen:1
-windowrulev2 = idleinhibit always, class:^(looking-glass-client)$
+windowrulev2 = idleinhibit focus, class:^(looking-glass-client)$
+windowrulev2 = renderunfocused,class:^(looking-glass-client)$
 
-workspace = 1, monitor:HDMI-A-1, persistent:true
-workspace = 2, monitor:HDMI-A-1, persistent:true
-workspace = 3, monitor:HDMI-A-1, persistent:true
-workspace = 4, monitor:HDMI-A-1, persistent:true
-workspace = 5, monitor:DP-3, persistent:true
-workspace = 6, monitor:DP-3, persistent:true
+
+workspace = 1, monitor:DP-1, persistent:true
+workspace = 2, monitor:DP-1, persistent:true
+workspace = 3, monitor:DP-1, persistent:true
+workspace = 4, monitor:DP-1, persistent:true
+workspace = 5, monitor:DP-2, persistent:true
+workspace = 6, monitor:DP-2, persistent:true
 
 
 ###############
