--- a/rainlily/.local/share/fcitx5/themes/solarized/theme.conf
+++ b/rainlily/.local/share/fcitx5/themes/solarized/theme.conf
@@ -1,22 +1,9 @@
 [Metadata]
-# Name
-Name=Default
-Name[ca]="Per defecte"
-Name[da]=Standard
-Name[fr]="Par défaut"
-Name[de]=Standard
-Name[zh_CN]=默认
-Name[ja]=デフォルト
-Name[vi]="Mặc định"
-Name[ko]=기본값
-Name[ru]="По умолчанию"
-Name[zh_TW]=預設
-# Version
-Version=1
-# Author
-Author=Fcitx
-# Description
-Description="Default Theme"
+Name=Solarized
+Version=0.1
+Author=lvctr
+Description=Solarized colour scheme for fcitx5
+ScaleWithDPI=True
 
 [InputPanel]
 # Normal text color
@@ -429,4 +416,3 @@ Bottom=5
 3="Menu Border"
 4="Menu Separator"
 5="Menu Selected Item Background"
-
