--- a/rainlily/.config/fcitx5/conf/classicui.conf
+++ b/rainlily/.config/fcitx5/conf/classicui.conf
@@ -19,9 +19,9 @@ ShowLayoutNameInIcon=True
 # Use input method language to display text
 UseInputMethodLanguageToDisplayText=True
 # Theme
-Theme=default
+Theme=solarized
 # Dark Theme
-DarkTheme=default-dark
+DarkTheme=solarized
 # Follow system light/dark color scheme
 UseDarkTheme=False
 # Follow system accent color if it is supported by theme and desktop
