--- a/rainlily/.config/spicetify/config-xpui.ini
+++ b/rainlily/.config/spicetify/config-xpui.ini
@@ -2,7 +2,7 @@
 experimental_features = 1
 extensions            = keyboardShortcut.js
 custom_apps           = lyrics-plus|new-releases
-sidebar_config        = 1
+sidebar_config        = 0
 home_config           = 1
 
 [Patch]
@@ -28,5 +28,5 @@ expose_apis        = 1
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.37.701.ge66eb7bc
-with    = 2.36.12
+version = 1.2.50.335.g5e2860a8
+with    = 2.38.4
