--- a/rainlily/.config/waybar/config.jsonc
+++ b/rainlily/.config/waybar/config.jsonc
@@ -14,8 +14,8 @@
 
     // Module Positioning
     "modules-left": [
-        "sway/window",
-        "sway/window#title",
+        "hyprland/window",
+        "hyprland/window#title",
     ],
     "modules-center": [
         "mpris",
@@ -32,17 +32,283 @@
     ],
 
     // Modules Configuration
-    "sway/window": {
+    "hyprland/window": {
         "separate-outputs": false,
-        "format": "{shell}/{app_id}",
-        "all-outputs": true,
+        "format": "{class}",
     },
 
-    "sway/window#title": {
+    "hyprland/window#title": {
         "separate-outputs": false,
         "format": "{title}",
         "max-length": 48,
+    },
+
+    "mpris": {
+        "format": "{player_icon} {title} / {artist}",
+        "format-paused": "{status_icon} {title} / {artist}",
+        "player-icons": {
+            "default": "",
+            "spotify": "<span color=\"#859900\"></span>",
+            "vlc": "<span color=\"#cb4b16\">󰕼</span>",
+            "mpv": "<span color=\"#6c71c4\"></span>"
+        },
+        "status-icons": {
+            "paused": ""
+        },
+        "ignored-players": ["vlc", "mpv", "firefox", "Google-chrome"],
+        "tooltip-format": "Playing on {player}"
+    },
+
+    "pulseaudio": {
+        "format": "{icon} {volume}%",
+        "format-bluetooth": "󰂰 {volume}%",
+        "format-muted": "<span color=\"#586e75\">󰸈 Muted</span>",
+        "format-icons": {
+            "headphone": "",
+            "default": ["", "", "", ""],
+        },
+        "scroll-step": 5,
+        "on-click": "pulseaudio-control next-node",
+        "on-click-right": "pavucontrol",
+        "on-click-middle": "pulseaudio-control togmute",
+        "ignored-sinks": ["Easy Effects Sink"]
+    },
+
+    "backlight": {
+        "format": "{icon} {percent}%",
+        "format-icons": [""] ,
+        "scroll-step": 5,
+    },
+
+    "idle_inhibitor": {
+        "format": "{icon}",
+        "format-icons": {
+            "activated": "<span color=\"#2aa198\">󰅶 on</span>",
+            "deactivated": "<span color=\"#586e75\">󰛊 off</span>"
+        },
+    },
+
+    "custom/weather": {
+        "format": "{}",
+        "exec": "~/.config/waybar/scripts/openweathermap-simple.sh",
+        "interval": 60,
+    },
+
+    "clock#date": {
+        "format": " {:%Y %m %d}",
+        "interval": 1,
+    },
+
+    "clock": {
+        "format": " {:%H %M %S}",
+        "interval": 1,
+    },
+
+    "custom/notification": {
+        "tooltip": true,
+        "format": "{icon} {}",
+        "format-icons": {
+            "notification": "<span color=\"#2aa198\">󰂚</span>",
+            "none": "󰂜",
+            "dnd-notification": "<span color=\"#cb4b16\">󰂠</span>",
+            "dnd-none": "<span color=\"#cb4b16\">󰪓</span>",
+            "inhibited-notification": "󰂠",
+            "inhibited-none": "󰪓",
+            "dnd-inhibited-notification": "󰂠",
+            "dnd-inhibited-none": "󰪓"
+        },
+        "return-type": "json",
+        "exec-if": "which swaync-client",
+        "exec": "swaync-client -swb",
+        "on-click": "swaync-client -t -sw",
+        "on-click-right": "swaync-client -d -sw",
+        "escape": true
+    },
+
+    "custom/swaync": {
+        "format": "{}",
+        "exec-if": "which swaync-client",
+        // "exec": "swaync-client -swb | jq .text",
+        "exec": "swaync-client -swb",
+        "return-type": "json",
+        "interval": 1,
+    },
+},
+
+{
+    // Bar 2 Metadata
+    "layer": "bottom", // Waybar at top layer
+    "output": "DP-1",
+    "position": "bottom", // Waybar position (top|bottom|left|right)
+    "height": 32, // Waybar height (to be removed for auto height)
+    // "width": 1280, // Waybar width
+    "spacing": 8, // Gaps between modules (4px)
+    "margin-bottom": 8,
+    "margin-left": 8,
+    "margin-right": 8,
+
+    // Module Positioning
+    "modules-left": [
+        "cpu",
+        "cpu-freq",
+        "cpu-temp",
+        "gpu-usage",
+        "memory",
+        "disk",
+    ],
+    "modules-center": [
+        "hyprland/workspaces",
+    ],
+    "modules-right": [
+        "battery",
+        "custom/power",
+        "network",
+        "tray",
+    ],
+
+    // Modules Configuration
+    "cpu": {
+        "interval": 3,
+        "format": " {load:0.2f}% {avg_frequency:0.2f}GHz"
+    },
+
+    "memory": {
+        "interval": 3,
+        "format": " {percentage}% {used:0.2f}GiB",
+    },
+
+    "disk": {
+        "interval": 30,
+        "format": "󰉉 {percentage_used}% {specific_free:0.0f}GB",
+        "unit": "GB",
+    },
+ 
+    "battery": {
+        "interval": 3,
+        "states": {
+            "warning": 30,
+            "critical": 10,
+        },
+        "format": "{icon} {capacity}%",
+        "format-discharging": "{icon} {capacity}% {power:0.2f}W 󱐋 {time}",
+        "format-charging": "{icon} {capacity}% {power:0.2f}W 󰚥 {time}",
+        "format-icons": {
+            "plugged": [
+                "󰂄",
+            ],
+            "discharging": [
+                "<span color=\"#dc322f\">󰂎</span>", 
+                "<span color=\"#dc322f\">󰁺</span>", 
+                "<span color=\"#cb4b16\">󰁻</span>", 
+                "󰁼", 
+                "󰁽", 
+                "󰁾", 
+                "󰁿", 
+                "󰂀", 
+                "󰂁", 
+                "󰂂", 
+                "󰂄"
+            ],
+            "charging": [
+                "<span color=\"#dc322f\">󰢟</span>", 
+                "<span color=\"#dc322f\">󰢜</span>", 
+                "<span color=\"#cb4b16\">󰂆</span>", 
+                "󰂇", 
+                "󰂈", 
+                "󰢝", 
+                "󰂉", 
+                "󰢞", 
+                "󰂊", 
+                "󰂋", 
+                "󰂅"
+            ],
+            "full": [
+                "<span color=\"#2aa198\">󰂄</span>",
+            ],
+        },
+        "format-time": "{H} {m}",
+        // "format-icons": ["", "", "", "", ""],
+    },
+
+    "hyprland/workspaces": {
+        "disable-scroll": true,
         "all-outputs": true,
+        "warp-on-scroll": false,
+        "format": "{icon}",
+        "format-icons": {
+            "1": "1",
+            "2": "2",
+            "3": "3",
+            "4": "",
+            "5": "5",
+            "6": "6",
+        }
+    },
+
+    "custom/power": {
+        "format": "󰂄 {}",
+        "exec": "~/.config/waybar/scripts/power-usage.sh",
+        "interval": 3,
+    },
+
+    "network": {
+        "format": "󰇚 {bandwidthDownBytes} 󰕒 {bandwidthUpBytes}",
+        "format-disconnected": "", //An empty format will hide the module.
+        "tooltip-format": "{ifname} via {gwaddr} 󰊗",
+        "tooltip-format-wifi": " {ifname} @ {essid} ({signalStrength}%) | {ipaddr}/{cidr}",
+        "tooltip-format-ethernet": " {ifname} | {ipaddr}/{cidr}",
+        "tooltip-format-disconnected": "Disconnected",
+        "max-length": 50,
+        "interval": 1,
+    },
+
+    "tray": {
+        "icon-size": 16,
+        "spacing": 8,
+        "show-passive-items": false,
+    }
+},
+
+{
+    // Bar 1 Metadata
+    "layer": "bottom", // Waybar at top layer
+    "output": "DP-2",
+    "position": "top", // Waybar position (top|bottom|left|right)
+    "height": 32, // Waybar height (to be removed for auto height)
+    // "width": 1280, // Waybar width
+    "spacing": 8, // Gaps between modules (4px)
+    "margin-top": 8,
+    "margin-left": 8,
+    "margin-right": 8,
+
+    // Module Positioning
+    "modules-left": [
+        "hyprland/window",
+    ],
+    "modules-center": [
+        
+    ],
+    "modules-right": [
+        "pulseaudio",
+        "backlight",
+        "idle_inhibitor",
+        "custom/weather",
+        "clock#date",
+        "clock",
+        "custom/notification",
+        "custom/swaync",
+    ],
+
+    // Modules Configuration
+    "hyprland/window": {
+        "separate-outputs": false,
+        "format": "{class}",
+    },
+
+    "hyprland/window#title": {
+        "separate-outputs": false,
+        "format": "{title}",
+        "max-length": 48,
     },
 
     "mpris": {
@@ -139,7 +405,7 @@
 {
     // Bar 2 Metadata
     "layer": "bottom", // Waybar at top layer
-    "output": "DP-1",
+    "output": "DP-2",
     "position": "bottom", // Waybar position (top|bottom|left|right)
     "height": 32, // Waybar height (to be removed for auto height)
     // "width": 1280, // Waybar width
@@ -158,13 +424,12 @@
         "disk",
     ],
     "modules-center": [
-        "sway/workspaces",
+        "hyprland/workspaces",
     ],
     "modules-right": [
         "battery",
         "custom/power",
         "network",
-        "tray",
     ],
 
     // Modules Configuration
@@ -231,7 +496,7 @@
         // "format-icons": ["", "", "", "", ""],
     },
 
-    "sway/workspaces": {
+    "hyprland/workspaces": {
         "disable-scroll": true,
         "all-outputs": true,
         "warp-on-scroll": false,
@@ -240,26 +505,10 @@
             "1": "1",
             "2": "2",
             "3": "3",
-            "4": "4",
+            "4": "",
             "5": "5",
             "6": "6",
-        },
-        /*"persistent-workspaces": {
-            "1": ["DP-1"],
-            "2": ["DP-1"],
-            "3": ["DP-1"],
-            "4": ["DP-1"],
-            "5": ["DP-2"],
-            "6": ["DP-2"],
-        },*/
-        "persistent-workspaces": {
-            "1": [],
-            "2": [],
-            "3": [],
-            "4": [],
-            "5": [],
-            "6": [],
-        },
+        }
     },
 
     "custom/power": {
