--- a/rainlily/.config/hypr/hyprland.conf
+++ b/rainlily/.config/hypr/hyprland.conf
@@ -60,9 +60,12 @@ exec-once = bitwarden-desktop
 windowrulev2 = workspace 5 silent, class:^(vesktop)$
 exec-once = vesktop
 
+windowrulev2 = workspace 5 silent, class:^(obsidian)$
+exec-once = obsidian
+
 windowrulev2 = workspace 5 silent, class:^(spotify-launcher)$
 windowrulev2 = workspace 5 silent, class:^(spotify)$
-exec-once = spotify-launcher
+exec-once = spotify-launcher --skip-update
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -288,6 +291,9 @@ bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
 bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
 bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
+bind = CTRL $mainMod SHIFT, 1, movecurrentworkspacetomonitor, l
+bind = CTRL $mainMod SHIFT, 2, movecurrentworkspacetomonitor, r
+
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspacesilent, special:magic
@@ -353,11 +359,11 @@ windowrulev2 = idleinhibit focus, class:^(looking-glass-client)$
 windowrulev2 = renderunfocused,class:^(looking-glass-client)$
 
 
-workspace = 1, monitor:DP-1, persistent:true
+workspace = 1, monitor:DP-1, persistent:true, default:true
 workspace = 2, monitor:DP-1, persistent:true
 workspace = 3, monitor:DP-1, persistent:true
 workspace = 4, monitor:DP-1, persistent:true
-workspace = 5, monitor:DP-2, persistent:true
+workspace = 5, monitor:DP-2, persistent:true, default:true
 workspace = 6, monitor:DP-2, persistent:true
 
 
