--- a/rainlily/.config/spicetify/config-xpui.ini
+++ b/rainlily/.config/spicetify/config-xpui.ini
@@ -28,5 +28,5 @@ expose_apis        = 1
 
 ; DO NOT CHANGE!
 [Backup]
-version = 1.2.50.335.g5e2860a8
-with    = 2.38.4
+version = 1.2.53.440.g7b2f582a
+with    = 2.38.7
